fixing the team member styling in dark mode

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,7 +55,6 @@
 
 .team-member img {
   border-radius: 50%;
-  box-shadow: 0 0 30px 15px white;
 }
 
 .team-member img:hover {
